--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
-    "postinstall": "ng build --prod",
+    "heroku-postbuild": "ng build --prod",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
